JP GENERATION - FORM BUILDING

--- a/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
@@ -110,47 +110,46 @@
         <div>
             <i aria-hidden="true" class="fa-brands fa-google-drive" id="con-ser-icon1"></i>
             <h3>Logo</h3>
-            <p class="con-ser-p">Unikátne logo pre Vaše podnikanie. Nemusí to byť len obyčajný text…</p>
+            <p class="con-ser-p">Logo, ktoré vás odlišuje. Vytvoríme pre vás unikátne logo, ktoré nedegeneruje na obyčajný text. Nechajte svoje podnikanie vyniknúť.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-bolt-lightning" id="con-ser-icon2"></i>
             <h3>Firemná identita</h3>
-            <p class="con-ser-p">Návrh celej identity firmy. Logo a jeho používanie, font písma, vizitka, web, sociálne siete, cenník. Záleží na tom v akej sfére podnikáte…</p>
+            <p class="con-ser-p">Celková firemná identita. Navrhneme pre vás kompletnú firemnú identitu, vrátane loga, používania loga, písma, vizitiek, webu, sociálnych sietí a cenníka. Vaša podnikateľská sféra bude odrážať váš profesionálny imidž.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-brands fa-adversal" id="con-ser-icon3"></i>
             <h3>Reklama</h3>
-            <p class="con-ser-p">Spracovanie reklamy pre internet, billboard alebo televíziu jednoducho všetko čo Vaša
-                kampaň vyžaduje…</p>
+            <p class="con-ser-p">Reklama, ktorá osloví. Zrealizujeme pre vás efektívnu a profesionálnu reklamu, ktorá splní všetky požiadavky vašej kampane. Nechajte to na nás a venujte sa svojmu podnikaniu.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa fa-print" id="con-ser-icon4"></i>
             <h3>Podklady pre tlač</h3>
-            <p class="con-ser-p">Spracujeme všetky podklady pre tlač a na Vás zostane už len realizácia…</p>
+            <p class="con-ser-p">Dokonalé podklady pre tlač. Spracujeme pre vás všetky potrebné podklady pre tlač. Vykonáme všetku potrebnú prípravu, takže vám ostane už len realizovať tlačové projekty.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-share-nodes" id="con-ser-icon5"></i>
             <h3>Sociálna identita</h3>
-            <p class="con-ser-p">Vzhľad Vašich sociálnych sieti je podstatný pre nadobudnutie nových sledovateľov. Preto nepodceňte svoju identitu…</p>
+            <p class="con-ser-p">Zaujmite na sociálnych sieťach. Zabezpečíme vám profesionálnu sociálnu identitu, ktorá bude vizuálne oslovovať vašu cieľovú skupinu a pomôže vám budovať silnú online komunitu.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-low-vision" id="con-ser-icon6"></i>
             <h3>Vizuál</h3>
-            <p class="con-ser-p">Máte produkt ktorý plánujete v budúcnosti predávať? No reálne ho ešte nemôžete držať v rukách? Spracujeme Vám vizuál pre jeho prezentáciu…</p>
+            <p class="con-ser-p">Predstavte svoj produkt v najlepšom svetle. Ak plánujete predávať produkt, ktorý ešte nie je fyzicky dostupný, vytvoríme pre vás vizuál, aby ste ho mohli predstaviť a prezentovať už teraz.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa-regular fa-images" id="con-ser-icon7"></i>
             <h3>Úprava fotografie</h3>
-            <p class="con-ser-p">Máte surové fotky bez úpravy a neviete čo s nimi? Máte roztrhnutú fotku v tlačovej podobe? Nechajte to na nás s týmto všetkým si dokážeme poradiť…</p>
+            <p class="con-ser-p">Oživte svoje fotografie. Úpravou surových fotografií a opravou poškodených obrázkov im dodáme nový život. Dajte svojim fotografiám profesionálny vzhľad.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-brands fa-figma" id="con-ser-icon8"></i>
             <h3>Web dizajn</h3>
-            <p class="con-ser-p">Vytvoríme Vám vzhľad Vášho budúceho webu. V prípade že web chcete spustiť vo vlastnej réžií…</p>
+            <p class="con-ser-p">Vytvorte si štýlový web. Navrhneme pre vás vizuálny vzhľad vášho budúceho webu. Ak plánujete vytvoriť web sami, poskytneme vám podporu pri výbere vhodných grafických prvkov a dizajnu.</p>
         </div>
         <section class="spacer-div"></section>
     </section>
@@ -185,36 +184,36 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa fotografovanie udalosti alebo stretnutia uskutočňujú?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby grafického dizajnu a kde sa stretávame na konzultáciách?</span></button>
                     <div class="panel">
-                        <p>Naša služba fotografie sa realizuje fyzicky na mieste, ktoré si zvolíte. Buďto ide o konkrétnu udalosť, párty, svadbu alebo iné podujatie. Prítomnosť fotografa na mieste zabezpečuje zachytenie dôležitých okamihov a zážitkov. Spoločne môžeme dohodnúť miesto a čas konania.</p>
+                        <p>Naša služba grafického dizajnu prebieha prostredníctvom konzultácií buď osobne, telefonicky alebo online. Podrobne si preberieme vaše požiadavky, ciele a očakávania. Môžeme sa stretnúť na akomkoľvek mieste, vo vašej kancelárii alebo komunikovať cez e-mail a videohovory.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie upravených fotografií?</span></button>
+                    <button class="accordion"><span class="btn-text">Aký je časový rámec na dokončenie grafického dizajnu?</span></button>
                     <div class="panel">
-                        <p>Po fotení sa vaše fotografie spracujú a upravia tak, aby vynikli ich najlepšie stránky. Časový rámec na spracovanie sa líši v závislosti od rozsahu fotografií a aktuálneho pracovného vyťaženia. Však sa vždy snažíme poskytnúť vám hotové fotografie v čo najkratšom čase, aby ste si ich mohli vychutnať.</p>
+                        <p>Časový rámec na dokončenie grafického dizajnu závisí od rozsahu projektu, komplexity a aktuálneho pracovného vyťaženia. Snažíme sa dodržiavať dohodnuté termíny a poskytnúť vám hotový dizajn v čo najkratšom čase, aby ste ho mohli využiť podľa svojich potrieb.</p>
                     </div>
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby a akceptujete kreditné karty?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za naše služby je možné vykonať buď prevodom na náš účet, alebo v hotovosti pri samotnej realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale všetky podrobnosti o platbe vám radi poskytneme vopred, aby ste mali všetko pripravené.</p>
+                        <p>Platbu za naše služby grafického dizajnu je možné vykonať prevodom na náš bankový účet. Podrobnosti o platbe, vrátane fakturácie a údajov pre prevod, vám poskytneme vopred po dohode. Momentálne neposkytujeme možnosť platby kreditnými kartami.</p>
                     </div>
                 </div>
                 <div class="menu-4">
-                    <button class="accordion"><span class="btn-text">Poskytujete tlačené fotografie a ak áno, aký je proces a cenník?</span>
+                    <button class="accordion"><span class="btn-text">Poskytujete tlačené materiály s grafickým dizajnom a ak áno, aký je proces a cenník?</span>
                     </button>
                     <div class="panel">
-                        <p>Áno, poskytujeme aj tlačené fotografie. V prípade záujmu o tlačené exempláre fotografii sa dohodneme na konkrétnych požiadavkách a objednávke. Vzhľadom na rôznorodosť formátov, veľkostí a materiálov je cenník tlačených fotografií individuálny a závisí od vašich konkrétnych požiadaviek.</p>
+                        <p>Áno, poskytujeme tlačené materiály s grafickým dizajnom. Po dohode a schválení dizajnu vám poskytneme informácie o možnostiach tlače, typoch materiálov, formátoch a cenníku. Zabezpečíme tlač a dodanie tlačených materiálov podľa vašich potrieb a požiadaviek.</p>
                     </div>
                 </div>
                 <div class="menu-5">
-                    <button class="accordion"><span class="btn-text">Ako dlho budú upravené fotografie uchované na cloudovom úložisku po ich odovzdaní?</span>
+                    <button class="accordion"><span class="btn-text">Ako dlho bude graficky dizajn uchovaný na cloudovom úložisku po jeho odovzdaní?</span>
                     </button>
                     <div class="panel">
-                        <p>Po spracovaní a odovzdaní upravených fotografií vám poskytneme prístup na cloudové úložisko, kde budú vaše fotografie uchované počas 30 dní. Počas tohto obdobia máte možnosť si fotografie stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme fotografiu z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
+                        <p>Po spracovaní a odovzdaní hotového grafického dizajnu vám poskytneme prístup na cloudové úložisko, kde budú váš dizajn uchovaný počas 30 dní. Počas tohto obdobia máte možnosť si diztajn stiahnuť a zálohovať ho na vlastnom zariadení. Po uplynutí 30 dní môžeme dizajn z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
                     </div>
                 </div>
             </div>
