--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -110,36 +110,35 @@
         <div>
             <i aria-hidden="true" class="fa-solid fa-credit-card" id="con-ser-icon1"></i>
             <h3>Zakúpenie vlastnej domeny</h3>
-            <p class="con-ser-p">Doména je vaša adresa na internete. Môže sa stať adresou vašej webstránky alebo smerovať na iný web, či profil na sociálnej sieti… (.sk, .online, .eu, .com, .store…)</p>
+            <p class="con-ser-p">Personalizovaná doména pre váš web. Umožníme vám zakúpiť a registrovať unikátnu doménu, ktorá bude zrkadliť váš online identitu a zvýšiť profesionalitu vášho podnikania.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-server" id="con-ser-icon2"></i>
             <h3>Umiestnenie na hosting</h3>
-            <p class="con-ser-p">Webhosting je vyhradený diskový priestor a výkon na serveri, ktorý je neustále pripojený do siete internet, aby sa k obsahu webových stránok dostali návštevníci kedykoľvek a z akéhokoľvek miesta na svete…</p>
+            <p class="con-ser-p">Zabezpečte si priestor pre váš web. Poskytneme vám hostingové riešenie s dostatočnou kapacitou a výkonom, aby ste mohli bez problémov hostovať váš web a spravovať jeho obsah.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-certificate" id="con-ser-icon3"></i>
             <h3>SSL certifikát</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Tento protokol (certifikát) zabezpečuje šifrovaný prenos dát medzi vašim počítačom a webstránkou alebo serverom, na ktoré sa pripájate cez internet…</p>
+            <p class="con-ser-p">Zabezpečte svoj web. S SSL certifikátom zabezpečíme vašu webstránku a zabezpečíme dôveru u vašich návštevníkov. Poskytneme im bezpečné pripojenie a ochranu ich osobných údajov.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa fa-wordpress" id="con-ser-icon4"></i>
             <h3>Inštalácia</h3>
-            <p class="con-ser-p">Nainštalujeme na Vašu domenu WordPress s ktorým pár úkonov zvládnete aj Vy bez znalosti
-                kódu…</p>
+            <p class="con-ser-p">Jednoduchá inštalácia WordPressu. Nainštalujeme WordPress na vašu doménu, takže budete môcť spravovať obsah vášho webu bez nutnosti znalosti kódovania. Budete mať plnú kontrolu nad svojím webom.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-cogs" id="con-ser-icon5"></i>
             <h3>Nastavenie</h3>
-            <p class="con-ser-p">Správne nastavenie je základ aby všetko fungovalo ako má…</p>
+            <p class="con-ser-p">Presné nastavenie pre váš web. Zameriame sa na detaily a správne nastavenie vášho webu, aby ste mali optimálnu výkonnosť, bezpečnosť a používateľskú skúsenosť.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-laptop-code" id="con-ser-icon6"></i>
             <h3>Dizajn</h3>
-            <p class="con-ser-p">Vzhľad Vášho webu môže vyzerať ako len chcete…</p>
+            <p class="con-ser-p">Unikátny dizajn pre váš web. Vytvoríme pre vás dizajn, ktorý bude vizuálne príťažlivý a zodpovedajúci vašej značke. Váš web bude vyniknúť a zaujme návštevníkov.</p>
         </div>
     </section>
     <section class="content-ser-3">
@@ -147,39 +146,37 @@
             <i aria-hidden="true" class="fa fa-mouse-pointer" id="con-ser-icon7"></i>
             <h3>Funkčnosť</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Na to aby to fungovalo nestačí len pekný dizajn. Každé tlačidlo alebo animácia musí
-                fungovať ako chceme my…</p>
+            <p class="con-ser-p">Dôkladná kontrola funkčnosti. Skontrolujeme a otestujeme všetky funkcie vášho webu, aby sme zabezpečili jeho bezchybný chod a použiteľnosť pre vašich návštevníkov.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-shield" id="con-ser-icon8"></i>
             <h3>Zabezpečenie</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Ochrana Vášho webu proti ukradnutiu dôležitých dát používateľov…</p>
+            <p class="con-ser-p">Zabezpečte svoj web pred hrozbami. S našimi bezpečnostnými opatreniami ochránime váš web pred rôznymi typmi útokov a zneužitím. Budete mať istotu, že vaše dáta sú chránené.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-cookie-bite" id="con-ser-icon9"></i>
             <h3>GDPR a cookie súbory</h3>
-            <p class="con-ser-p">Keďže na niektoré úkony musíš dostať súhlas od zákazníka alebo používateľa webu. Nastavíme to tak aby oba strany boli spokojné…</p>
+            <p class="con-ser-p">Zabezpečenie GDPR a správa cookie súborov. Pomôžeme vám nastaviť váš web tak, aby ste získali súhlas od vašich zákazníkov alebo používateľov webu pre niektoré operácie, ktoré to vyžadujú. Zabezpečíme, aby váš web bol v súlade s GDPR a aby obidve strany boli spokojné s ochranou osobných údajov.</p>
         </div>
     </section>
     <section class="content-ser-4">
         <div>
             <i aria-hidden="true" class="fa-solid fa-terminal" id="con-ser-icon10"></i>
             <h3>Posledný test a sme online</h3>
-            <p class="con-ser-p">Posledná skúška aby sme Vám odovzdali 100% produkt…</p>
+            <p class="con-ser-p">Kontrolný test pred spustením: Vykonáme posledný test vášho webu, aby sme sa uistili, že všetko funguje správne a že váš web je pripravený ísť online. Chceme vám odovzdať 100% funkčný produkt.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-regular fa-handshake" id="con-ser-icon11"></i>
             <h3>Odovzdanie webu</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Odovzdáme Vám všetky potrebné prihlasovacie údaje na správu Vášho webu…</p>
+            <p class="con-ser-p">Odovzdáme vám váš web. Poskytneme vám všetky potrebné prihlasovacie údaje a prístupové údaje na správu vášho webu. Budete mať plnú kontrolu a možnosť spravovať váš web podľa svojich potrieb.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-headset" id="con-ser-icon12"></i>
             <h3>Podpora</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">V prípade že správu domény a hostingu necháte na nás. Tak sme tu pre Vás 24/7 pri
-                neočakávaných chybách domeny…</p>
+            <p class="con-ser-p">Odborná podpora 24/7. Ak nám zveríte správu domény a hostingu, budeme tu pre vás kedykoľvek v prípade neočakávaných chýb alebo problémov s doménou. Poskytneme vám odbornú podporu a rýchlu reakciu na riešenie problémov.</p>
         </div>
     </section>
     <section class="content-ser-line">
@@ -213,36 +210,36 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa fotografovanie udalosti alebo stretnutia uskutočňujú?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby WordPress webu a aké informácie potrebujete od klienta?</span></button>
                     <div class="panel">
-                        <p>Naša služba fotografie sa realizuje fyzicky na mieste, ktoré si zvolíte. Buďto ide o konkrétnu udalosť, párty, svadbu alebo iné podujatie. Prítomnosť fotografa na mieste zabezpečuje zachytenie dôležitých okamihov a zážitkov. Spoločne môžeme dohodnúť miesto a čas konania.</p>
+                        <p>Realizácia služby WordPress webu začína konzultáciou s klientom, kde si preberieme vaše požiadavky na webovú stránku. Potrebujeme informácie o vašej spoločnosti, cieľovej skupine, obsahu a funkciách, ktoré chcete na webe zahrnúť. Na základe týchto informácií vytvoríme koncept a návrh webu.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie upravených fotografií?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako dlho zvyčajne trvá vytvorenie a dokončenie WordPress webu?</span></button>
                     <div class="panel">
-                        <p>Po fotení sa vaše fotografie spracujú a upravia tak, aby vynikli ich najlepšie stránky. Časový rámec na spracovanie sa líši v závislosti od rozsahu fotografií a aktuálneho pracovného vyťaženia. Však sa vždy snažíme poskytnúť vám hotové fotografie v čo najkratšom čase, aby ste si ich mohli vychutnať.</p>
+                        <p>Časový rámec vytvorenia a dokončenia WordPress webu závisí od rozsahu projektu, jeho komplexity a individuálnych požiadaviek klienta. Všeobecne platí, že vytvorenie webu môže trvať niekoľko týždňov až mesiacov. Presný časový rámec budeme dohodnúť po detailnejšej analýze vašich požiadaviek.</p>
                     </div>
                 </div>
                 <div class="menu-3">
-                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby a akceptujete kreditné karty?</span>
+                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby WordPress webu?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za naše služby je možné vykonať buď prevodom na náš účet, alebo v hotovosti pri samotnej realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale všetky podrobnosti o platbe vám radi poskytneme vopred, aby ste mali všetko pripravené.</p>
+                        <p>Platbu za službu WordPress webu je možné vykonať prevodom na náš bankový účet. Zvyčajne sa platba realizuje vo forme záloh a záverečné platby po dokončení projektu. Presné podrobnosti o platbe a fakturácii vám poskytneme vopred po dohode.</p>
                     </div>
                 </div>
                 <div class="menu-4">
-                    <button class="accordion"><span class="btn-text">Poskytujete tlačené fotografie a ak áno, aký je proces a cenník?</span>
+                    <button class="accordion"><span class="btn-text">Ako prebieha dodanie hotového WordPress webu klientovi?</span>
                     </button>
                     <div class="panel">
-                        <p>Áno, poskytujeme aj tlačené fotografie. V prípade záujmu o tlačené exempláre fotografii sa dohodneme na konkrétnych požiadavkách a objednávke. Vzhľadom na rôznorodosť formátov, veľkostí a materiálov je cenník tlačených fotografií individuálny a závisí od vašich konkrétnych požiadaviek.</p>
+                        <p>Po dokončení WordPress webu vám poskytneme prístup na hostingové prostredie, kde bude váš web umiestnený. Zabezpečíme prenos súborov a databázy a nainštalujeme web na hostingový server. Zároveň vás oboznámime s administráciou webu, aby ste mohli spravovať obsah a aktualizácie.</p>
                     </div>
                 </div>
                 <div class="menu-5">
-                    <button class="accordion"><span class="btn-text">Ako dlho budú upravené fotografie uchované na cloudovom úložisku po ich odovzdaní?</span>
+                    <button class="accordion"><span class="btn-text">Poskytujete školenie alebo podporu pri používaní WordPress webu?</span>
                     </button>
                     <div class="panel">
-                        <p>Po spracovaní a odovzdaní upravených fotografií vám poskytneme prístup na cloudové úložisko, kde budú vaše fotografie uchované počas 30 dní. Počas tohto obdobia máte možnosť si fotografie stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme fotografiu z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
+                        <p>Áno, poskytujeme školenie a podporu pri používaní WordPress webu. Po dodaní webu vás naučíme, ako pridávať a upravovať obsah, spravovať menu a stránky, pridávať obrázky a podobne. Zabezpečíme aj podporu v prípade technických otázok alebo problémov s webom.</p>
                     </div>
                 </div>
             </div>
